make nqood concrete component diagram

--- a/project.tex
+++ b/project.tex
@@ -73,16 +73,16 @@ Figure \ref{fig:black-box} demonstrates all the possible inputs and outputs of b
         \end{enumerate}
 \end{enumerate}
 
-\chapter{Design Package Diagram}
+\chapter{Design Concrete Component Diagram}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.8\textwidth]{images/nqood-package-diagram.png}
-    \caption{Nqood Package Diagram}
-    \label{fig:package-diagram}
+    \includegraphics[width=0.8\textwidth]{images/nqood-concrete-component-diagram.png}
+    \caption{Nqood Concrete Component Diagram}
+    \label{fig:concrete-diagram}
 \end{figure}
 
-Figure \ref{fig:package-diagram} illustrates how the Nqood system has many external dependencies managed by internal subsystems that make the wallet functionality possible.
+Figure \ref{fig:concrete-diagram} illustrates how the Nqood system has many external dependencies managed by internal subsystems that make the wallet functionality possible.
 
 Each internal subsystem in the Nqood system has its own database to make each subsystem independent. Below is a description of the 9 internal subsystems:
 
