add things to the pdf

--- a/project.tex
+++ b/project.tex
@@ -115,4 +115,28 @@ We injected prototyping in the requirements phase because we have complex requir
 
 And in every phase we added a V\&V stage. We care a lot about Quality. Quality is important when building a secure and elegant digital wallet. If we don't bake the quality in, we won't have a great product!
 
+\chapter{Iteration 2}
+
+\section{Use Case Diagram for Accounts Subsystem}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/nqood-accounts-use-case-diagram.png}
+    \caption{Nqood Accounts Use Case Diagrm}
+    \label{fig:nqood-accounts-use-case-diagram}
+\end{figure}
+
+\section{Make Transaction Use Case Description}
+
+
+
+\section{Make Transaction Use Case Class Diagram}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/nqood-make-tx-use-case-class-diagram.png}
+    \caption{Nqood Make Transaction Use Case Class Diagrm}
+    \label{fig:nqood-make-transaction-use-case-class-diagram}
+\end{figure}
+
 \end{document}
