add the diagrams

--- a/project.tex
+++ b/project.tex
@@ -128,8 +128,6 @@ And in every phase we added a V\&V stage. We care a lot about Quality. Quality i
 
 \section{Make Transaction Use Case Description}
 
-
-
 \section{Make Transaction Use Case Class Diagram}
 
 \begin{figure}[h!]
@@ -138,5 +136,25 @@ And in every phase we added a V\&V stage. We care a lot about Quality. Quality i
     \caption{Nqood Make Transaction Use Case Class Diagrm}
     \label{fig:nqood-make-transaction-use-case-class-diagram}
 \end{figure}
+
+\section{Make Local Transaction Sequence Diagram}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/nqood-make-local-tx-sequence-diagram.png}
+    \caption{Nqood Make Local Transaction Sequence Diagram}
+    \label{fig:nqood-make-local-transaction-sequence-diagram}
+\end{figure}
+
+\section{Make Account State Diagram}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/nqood-account-tx-state-diagram.png}
+    \caption{Nqood Make Account State Diagrm}
+    \label{fig:nqood-make-account-state-diagram}
+\end{figure}
+
+
 
 \end{document}
