--- a/project.tex
+++ b/project.tex
@@ -129,6 +129,19 @@ And in every phase we added a V\&V stage. We care a lot about Quality. Quality i
 \section{Make Transaction Use Case Description}
 
 \section{Make Transaction Use Case Class Diagram}
+\begin{center}
+    \begin{tabular}{| c | c |}
+        \hline
+        Name: & Make Local Transaction \\
+        \hline
+        Actors: & Customer, Compliance Officer \\
+        \hline
+        Goals: & For Customer: To transfer funds to another account within the same country (local).
+        For Compliance Officer: To ensure that local transactions comply with regulatory \\
+
+        
+    \end{tabular}
+\end{center}
 
 \begin{figure}[h!]
     \centering
