update activity diagram to update accounts
Co-authored-by: Abd-404 <abdullahmeraj243@gmail.com>

--- a/project.tex
+++ b/project.tex
@@ -132,14 +132,12 @@ And in every phase we added a V\&V stage. We care a lot about Quality. Quality i
 \begin{center}
     \begin{tabular}{| c | c |}
         \hline
-        Name: & Make Local Transaction \\
+        Name:   & Make Local Transaction                                                              \\
         \hline
-        Actors: & Customer, Compliance Officer \\
+        Actors: & Customer, Compliance Officer                                                        \\
         \hline
-        Goals: & For Customer: To transfer funds to another account within the same country (local).
-        For Compliance Officer: To ensure that local transactions comply with regulatory \\
-
-        
+        Goals:  & For Customer: To transfer funds to another account within the same country (local).
+        For Compliance Officer: To ensure that local transactions comply with regulatory              \\
     \end{tabular}
 \end{center}
 
@@ -168,6 +166,13 @@ And in every phase we added a V\&V stage. We care a lot about Quality. Quality i
     \label{fig:nqood-make-account-state-diagram}
 \end{figure}
 
+\section{Make Transaction Activity Diagram}
 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/nqood-make-tx-activity-diagram.png}
+    \caption{Nqood Make Transaction Activity Diagram}
+    \label{fig:nqood-make-transaction-activity-diagram}
+\end{figure}
 
 \end{document}
