add better explanantion

--- a/project.tex
+++ b/project.tex
@@ -184,6 +184,8 @@ The accounts subsystem is responible for managing the customer accounts and the 
 
 \section{Make Transaction Use Case Class Diagram}
 
+This class diagram shows the classes involved in the make transaction use case. It shows the relationships between the classes and the attributes and methods of each class. The make transaction use case class diagram is shown in Figure \ref{fig:nqood-make-transaction-use-case-class-diagram}.
+
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.8\textwidth]{images/nqood-make-tx-use-case-class-diagram.png}
@@ -191,7 +193,11 @@ The accounts subsystem is responible for managing the customer accounts and the 
     \label{fig:nqood-make-transaction-use-case-class-diagram}
 \end{figure}
 
+\newpage
+
 \section{Make Local Transaction Sequence Diagram}
+
+This sequence diagram shows the sequence of interactions between the customer, the system, and the compliance officer when the customer makes a local transaction. The make local transaction sequence diagram is shown in Figure \ref{fig:nqood-make-local-transaction-sequence-diagram}.
 
 \begin{figure}[h!]
     \centering
@@ -200,7 +206,11 @@ The accounts subsystem is responible for managing the customer accounts and the 
     \label{fig:nqood-make-local-transaction-sequence-diagram}
 \end{figure}
 
+\newpage
+
 \section{Make Account State Diagram}
+
+This state diagram shows the different states that an account can be in and the transitions between these states. The make account state diagram is shown in Figure \ref{fig:nqood-make-account-state-diagram}.
 
 \begin{figure}[h!]
     \centering
@@ -209,7 +219,11 @@ The accounts subsystem is responible for managing the customer accounts and the 
     \label{fig:nqood-make-account-state-diagram}
 \end{figure}
 
+\newpage
+
 \section{Make Transaction Activity Diagram}
+
+This activity diagram shows the activities involved in making a transaction. It shows the sequence of activities that need to be performed to complete a transaction. The make transaction activity diagram is shown in Figure \ref{fig:nqood-make-transaction-activity-diagram}.
 
 \begin{figure}[h!]
     \centering
